footer alignment quick fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -248,10 +248,11 @@ a.text-naf-white:hover {
 
 	#footer-connect {
 		margin-bottom: 2.2rem;
+		margin-top: 1rem;
 	}
 
 	.connect-with-us {
-		margin-top: 1rem;
+		margin-top: .5rem;
 		margin-bottom: .75rem;
 	}
 
